<resources>
    <string name="app_name">Super Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="or_with">or with</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="create">Create</string>
    <string name="have_account">Already Have an account?</string>
    <string name="sign_in">Login</string>
    <string name="join_date">Join Date</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="interests">Interests</string>
    <string name="done">Done</string>
    <string name="search">Search...</string>
    <string name="settings">Settings</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="lock">Settings</string>
    <string name="edit">Edit</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="set_payment">Set Payment</string>
    <string name="save">Save</string>
    <string name="payment_method">Payment Method</string>
    <string name="paypal_id">Your Paypal ID</string>
    <string name="phone_no">Phone Number</string>
    <string name="your_balance">Your Balance</string>
    <string name="general">General</string>
    <string name="change_password">Change Passoword</string>
    <string name="deactivate_account">Deactivate account</string>
    <string name="view_block_list">View blocked list</string>
    <string name="balance">Balance</string>
    <string name="buy_credits">Buy Credits</string>
    <string name="balance_history">Balance History</string>
    <string name="about">About</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="acknoweledge">Acknowledgements</string>
    <string name="others">Others</string>
    <string name="log_out">Log out</string>
    <string name="contact_us">Contact Us</string>
    <string name="report_problem">Report a problem</string>
    <string name="credits">Credits</string>
    <string name="credit_descrip">You can see your remaining amount here or  you can also buy.</string>
    <string name="max_limit">*10,000$ maximum</string>
    <string name="buy">Buy</string>
    <string name="type_message">Write your message...</string>
    <string name="loading">Please wait...</string>
    <string name="server_client_id">438404227884-ce1hvfg4r9le809u4c61jt3argj1va9j.apps.googleusercontent.com</string>
    <string name="message">Message</string>
    <string name="rate_to_chat">Rate of Chat</string>
    <string name="for_each_text">For each text message Cost</string>
    <string name="for_each_image">For each Image Cost</string>
    <string name="agree_and_continue">Agree and continue</string>
    <string name="disagree_and_back">Disagree and go back</string>
    <string name="buy_from_balance">Buy From Balance</string>

    <string name="price_text">Price</string>
    <string name="accept_text">Accept</string>
    <string name="buy_balance_text"><u>Buy Balance?</u></string>
    <string name="set_price_text">Set Chat Price</string>
    <string name="price_per_character_text">Price per character</string>
    <string name="price_per_image_text">Price per image</string>
    <string name="price_hint_text">0$</string>
    <string name="slelect_amount">Select Amount</string>
    <string name="add_credit">Add Credit</string>
    <string name="update">Update</string>

    <string name="help_text">But I must explain to you how all this mistake idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter</string>
    <string name="support_phone">+923057372009</string>
    <string name="support_email">zohaibameen007@gmail.com</string>
    <string name="support_web">www.mz007.com</string>
    <string name="help">Help</string>
    <string name="support_location">1st Block 1st Cross, Rammurthy nagar, Sahiwal-560016</string>
    <string name="policy_text_1">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna</string>
    <string name="terms_use_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_use">Terms of use</string>
    <string name="_30">30$</string>
    <string name="_70">70$</string>
    <string name="_120">120$</string>
    <string name="your_credit">Your Credit</string>
    <string name="_0">0 To 100 Character</string>
</resources>