<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".fragments.main.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/_16ssp"
            android:text="@string/app_name"
            android:textColor="@color/colorBlack"
            android:fontFamily="sans-serif-condensed"/>
        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_settings"
            android:background="?actionBarItemBackground"
            android:contentDescription="@string/settings" />
    </RelativeLayout>
   <AutoCompleteTextView
       android:id="@+id/autoSearch"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/_10sdp"
       android:background="@drawable/bg_search"
       android:drawableStart="@drawable/ic_search"
       android:drawablePadding="@dimen/_12sdp"
       android:paddingLeft="@dimen/_12sdp"
       android:textSize="@dimen/_10ssp"
       android:textColorHint="@color/colorBlue"
       android:fontFamily="@font/roboto_light"
       android:hint="@string/search"
       android:paddingRight="@dimen/_12sdp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerUsers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_15sdp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        tools:itemCount="9"
        tools:listitem="@layout/item_home_user"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>