<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".fragments.others.buycredit.BuyCreditFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/buy_credits"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="?actionBarItemBackground"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCreditTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/credits"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBack"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvCurrentCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/colorYellow"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toEndOf="@id/tvCreditTitle"
            app:layout_constraintTop_toBottomOf="@id/tvCreditTitle"
            app:layout_constraintTop_toTopOf="@id/tvCreditTitle"
            tools:text="$0" />

        <TextView
            android:id="@+id/credit_descrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/credit_descrip"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCreditTitle" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/colorGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/credit_descrip" />

        <TextView
            android:id="@+id/credit_max_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/max_limit"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <androidx.cardview.widget.CardView
            android:id="@+id/first_amount_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            app:cardBackgroundColor="@color/colorYellow"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/credit_max_limit">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/first_amount_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/_30" />

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_google_pay"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/second_amount_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_amount_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/second_amount_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/_70" />

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_google_pay"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/third_amount_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_amount_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/third_amount_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/_120" />

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_google_pay"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBuyFromBalance"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:fontFamily="@font/roboto_regular"
            android:paddingTop="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:text="@string/buy_from_balance"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_24sdp"
            app:layout_constraintBottom_toTopOf="@id/btnBuy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBuy"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:fontFamily="@font/roboto_regular"
            android:paddingTop="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:text="@string/buy"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_24sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>