<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="@dimen/_48sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp">

                <TextView
                    android:id="@+id/ratesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:includeFontPadding="false"
                    android:text="@string/buy_from_balance"
                    android:textColor="@color/colorBlue"
                    android:textSize="@dimen/_18ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/btnClose"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:background="@drawable/red_round_4"
                    android:contentDescription="@null"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_close"
                    app:layout_constraintBottom_toBottomOf="@id/ratesTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/ratesTitle"
                    app:tint="@color/colorWhite" />

                <TextView
                    android:id="@+id/character_amount_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/slelect_amount"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ratesTitle" />

                <EditText
                    android:id="@+id/etAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/price_hint_text"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintTop_toBottomOf="@id/character_amount_text" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAdd"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:text="@string/add_credit"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    app:backgroundTint="@color/colorBlue"
                    app:cornerRadius="@dimen/_24sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etAmount" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>