<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            app:cardBackgroundColor="@color/cardBackground"
            android:layout_marginBottom="@dimen/_6sdp"
            app:cardCornerRadius="@dimen/_48sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp">

                <TextView
                    android:id="@+id/ratesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:includeFontPadding="false"
                    android:text="@string/price_text"
                    android:textColor="@color/colorBlue"
                    android:textSize="@dimen/_18ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/btnClose"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:background="@drawable/red_round_4"
                    android:contentDescription="@null"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_close"
                    app:layout_constraintBottom_toBottomOf="@id/ratesTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/ratesTitle"
                    app:tint="@color/colorWhite" />

                <TextView
                    android:id="@+id/character_amount_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ratesTitle"
                    tools:text="5$ per character" />

                <View
                    android:id="@+id/divider_character_amount"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@color/colorGray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/character_amount_text" />

                <TextView
                    android:id="@+id/image_amount_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_character_amount"
                    tools:text="10$ per image" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAgree"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:text="@string/accept_text"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    app:backgroundTint="@color/colorBlue"
                    app:cornerRadius="@dimen/_24sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_amount_text" />


                <TextView
                    android:id="@+id/buy_balance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/buy_balance_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnAgree" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>